--- a/systembackup.conf
+++ b/systembackup.conf
@@ -1,2 +1,3 @@
-TARGET_DIR="/run/media/owen/95920304-fb6c-4a82-a0d5-05021b03f124/Backup/"
+TARGET_DIR="/run/media/owen/95920304-fb6c-4a82-a0d5-05021b03f124/Backup"
 SOURCE_DIR="/home/owen /etc"
+BACKUP_LENGTH=30
