--- a/systembackup.conf
+++ b/systembackup.conf
@@ -1,4 +1,3 @@
 TARGET_DIR="/run/media/owen/95920304-fb6c-4a82-a0d5-05021b03f124/Backup"
 SOURCE_DIR="/home/owen /etc"
-DAYS_TO_KEEP=30
-BACKUPS_PER_DAY=24
+BACKUPS_TO_KEEP=750
