--- a/systembackup.conf
+++ b/systembackup.conf
@@ -6,3 +6,5 @@ REMOTE_SERVER="totoro.local"
 REMOTE_USER="owen"
 REMOTE_DIR="/home/owen/Backup"
 REMOTE_BACKUPS_TO_KEEP=1000
+
+SSH_ID="/home/owen/.ssh/id_rsa"
