--- a/systembackup.conf
+++ b/systembackup.conf
@@ -2,7 +2,9 @@ TARGET_DIR="/run/media/owen/95920304-fb6c-4a82-a0d5-05021b03f124/Backup"
 SOURCE_DIR="/home/owen /etc"
 BACKUPS_TO_KEEP=1000
 
-REMOTE_SERVER="totoro.local"
+REMOTE_BACKUP=true
+
+REMOTE_SERVER="10.0.0.3"
 REMOTE_USER="owen"
 REMOTE_DIR="/home/owen/Backup"
 REMOTE_BACKUPS_TO_KEEP=1000
