Added logic for when a backup for the current hour exists

--- a/systembackup.conf
+++ b/systembackup.conf
@@ -1,11 +1,11 @@
 TARGET_DIR="/run/media/owen/95920304-fb6c-4a82-a0d5-05021b03f124/Backup"
 SOURCE_DIR="/home/owen /etc"
-BACKUPS_TO_KEEP=1000
+BACKUPS_TO_KEEP=1500
 
 REMOTE_BACKUP=true
 
 SSH_ID="/home/owen/.ssh/id_rsa"
-REMOTE_SERVER="10.0.0.3"
+REMOTE_SERVER="totoro.local"
 REMOTE_USER="owen"
 REMOTE_DIR="/home/owen/Backup"
-REMOTE_BACKUPS_TO_KEEP=168
+REMOTE_BACKUPS_TO_KEEP=1500
