Reworked the script so that arbitary amounts of remote backups can be used

--- a/systembackup.conf
+++ b/systembackup.conf
@@ -1,11 +1,10 @@
-TARGET_DIR="/run/media/owen/95920304-fb6c-4a82-a0d5-05021b03f124/Backup"
-SOURCE_DIR="/home/owen /etc"
-BACKUPS_TO_KEEP=2500
+LOCAL_BACKUP_DIRECTORY="/run/media/owen/95920304-fb6c-4a82-a0d5-05021b03f124/Backup"
+SOURCES="/home/owen /etc"
+LOCAL_BACKUPS_TO_KEEP=2500
 
-REMOTE_BACKUP=true
-
-SSH_ID="/home/owen/.ssh/id_rsa"
-REMOTE_SERVER="totoro.local"
-REMOTE_USER="owen"
-REMOTE_DIR="/home/owen/Backup"
-REMOTE_BACKUPS_TO_KEEP=2500
+# Array to store the remote location data.
+# One config entry per line
+# Format is "server user ssh_id backup_dir backups_to_keep"
+REMOTE_CONFIG=(
+"totoro.local owen /home/owen/.ssh/id_rsa /home/owen/Backup 2500"
+)
