Script now encrypts all backups using OpenSSL
Script now runs out of /usr/bin/backup and /etc/backup

Changes to how local backups are hardlinked as rsync
wasn't happy with using the newly created files.

--- a/systembackup.conf
+++ b/systembackup.conf
@@ -1,10 +1,18 @@
-LOCAL_BACKUP_DIRECTORY="/run/media/owen/95920304-fb6c-4a82-a0d5-05021b03f124/Backup"
-SOURCES="/home/owen /etc"
+LOCAL_BACKUP_DIRECTORY="/mnt/backup"
+SOURCES="/home /etc"
 LOCAL_BACKUPS_TO_KEEP=2500
+
+# OpenSSL encryption cipher. See "openssl enc" for more info.
+CIPHER="-aes-256-cbc"
+
+# OpenSSL password. See "openssl pass" for more info.
+PASSWORD="pass:password"
+#PASSWORD="enc:environment variable"
+#PASSWORD="file:password file"
 
 # Array to store the remote location data.
 # One config entry per line
 # Format is "server user ssh_id backup_dir backups_to_keep"
 REMOTE_CONFIG=(
-"totoro.local owen /home/owen/.ssh/id_rsa /home/owen/Backup 2500"
+"server user ssh_id /mnt/backup number_of_backups"
 )
