Changed the timer to run every 6 hours, starting at midnight.
Updated some comments that were incorrect.

More comments for tracking where the script it up to in the logs.
Comments about what I need to do to make this even better on
the crypto side. Namely adding HMAC for file validation and
removing the temp directory where file are decrypted for
comparison. The less the data is in the clear, the safer
everyone is when using this script.

--- a/systembackup.conf
+++ b/systembackup.conf
@@ -1,3 +1,12 @@
+# Yes, this is just a bash file that is 'source'ed into the main
+# script. I know it is terrible, and that I really should be using
+# something that doesn't allow arbitary code injection, but I _really_
+# don't like dealing with bash that much, but I have dug this hole
+# already and it works. Ideally I would roll this into haskell so
+# that I can get some sexy type checking and inference, but then
+# I have much the same problem of dealing with ssh/rsync/cp/openssl,
+# but now with extra monadic stuff around it.
+
 LOCAL_BACKUP_DIRECTORY="/mnt/backup"
 SOURCES="/home /etc"
 LOCAL_BACKUPS_TO_KEEP=2500
