--- a/systembackup.conf
+++ b/systembackup.conf
@@ -11,13 +11,19 @@ LOCAL_BACKUP_DIRECTORY="/mnt/backup"
 SOURCES="/home /etc"
 LOCAL_BACKUPS_TO_KEEP=2500
 
-# OpenSSL encryption cipher. See "openssl enc" for more info.
+# OpenSSL encryption cipher. See "openssl enc --help" for more info.
 CIPHER="-aes-256-cbc"
 
-# OpenSSL password. See "openssl pass" for more info.
+# OpenSSL digest algorism. See "openssl dgst --help" for more info.
+HMAC_ALGO="-sha512"
+
+# OpenSSL password for encyption. See "openssl pass" for more info.
 PASSWORD="pass:password"
-#PASSWORD="enc:environment variable"
-#PASSWORD="file:password file"
+#PASSWORD="env:environment_variable"
+#PASSWORD="file:password_file"
+
+# OpenSSL hmac key. Alphanumeric. See the openssl man pages for more info.
+HMAC_KEY="hmac_key"
 
 # Array to store the remote location data.
 # One config entry per line
